project-1-CF-EC2-SG-Static-Web/v1/EC2-SG-StaticWeb-CF.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation Template EC2InstanceWithSecurityGroupSample for Clarusway with Apache, AWS Linux2
Parameters:
  KeyName: 
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
    ConstraintDescription: must be a valid EC2 instance type.
  AllowedIP:
    Description: The IP address range that can have access for ports 22 and 80
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  ImageId:
    Description: Image ID
    Type: String
    Default: ami-02354e95b39ca8dec

Resources:
  EC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: !Ref InstanceType
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      KeyName: !Ref KeyName
      ImageId: !Ref ImageId
      Tags:
        - Key: Name
          Value: !Sub 'Web Server of ${AWS::StackName}'
      UserData:
        'Fn::Base64': !Sub |
          #!/bin/bash
          yum update -y
          yum install httpd -y
          chmod -R 777 /var/www/html
          cd /var/www/html
          wget https://raw.githubusercontent.com/akoleoglu/aws-projects/master/project-1-CF-EC2-SG-Static-Web/static-web/cat0.jpg
          wget https://raw.githubusercontent.com/akoleoglu/aws-projects/master/project-1-CF-EC2-SG-Static-Web/static-web/cat1.jpg
          wget https://raw.githubusercontent.com/akoleoglu/aws-projects/master/project-1-CF-EC2-SG-Static-Web/static-web/cat2.jpg
          wget https://raw.githubusercontent.com/akoleoglu/aws-projects/master/project-1-CF-EC2-SG-Static-Web/static-web/index.html
          systemctl start httpd
          systemctl enable httpd
           
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH access via port 22 and access to port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref AllowedIP
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref AllowedIP

Outputs:
  
  PublicDNS:
    Description: Public DNSName of the newly created EC2 instance
    Value: !GetAtt 
      - EC2Instance
      - PublicDnsName
